Rearrange my social

--- a/index.html
+++ b/index.html
@@ -17,7 +17,31 @@
         <!--Your name goes here -->
         Moblin
       </h1>
+    </main>
+    <section class="background--skyBlue section">
+      <h2 class="color--cloud margin--none section__text--centered">
+        Portfolio
+      </h2>
+    </section>
 
+    <div id="example-work"></div>
+
+    <section class="background--skyBlue section">
+      <h2 class="color--cloud margin--none section__text--centered">
+        About Me
+      </h2>
+    </section>
+
+    <section class="section section--alignCentered section--description">
+      <p class="color--darkgrey section__description">
+        I like to work hard and learn new things.
+      </p>
+    </section>
+
+    <section class="background--skyBlue section">
+      <h2 class="color--cloud margin--none section__text--centered">
+        Social
+      </h2>
       <ul class="section--social">
 
         <!--Links to relevant professional social media & resume -->
@@ -52,27 +76,7 @@
           </a>
         </li>
       </ul>
-    </main>
-    <section class="background--skyBlue section">
-      <h2 class="color--cloud margin--none section__text--centered">
-        Portfolio
-      </h2>
     </section>
-
-    <div id="example-work"></div>
-
-    <section class="background--skyBlue section">
-      <h2 class="color--cloud margin--none section__text--centered">
-        About Me
-      </h2>
-    </section>
-
-    <section class="section section--alignCentered section--description">
-      <p class="color--darkgrey section__description">
-        I like to work hard and learn new things.
-      </p>
-
-
 
     <script type="text/javascript" src="dist/bundle.js">
 
