Change to a more suitable color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <main class="overflow--auto">
-      <h1 class="color--skyBlue section__heading--largest">
+      <h1 class="color--moblinGreen section__heading--largest">
         <!--Your name goes here -->
         Moblin
       </h1>
@@ -25,7 +25,7 @@
 
         <!-- Link to Linked In profile -->
         <li class="socialWrapper">
-          <a class="color--skyBlue social"
+          <a class="color--moblinGreen social"
              title="LinkedIn Profile"
              target="_blank"
              href="#">
@@ -34,8 +34,8 @@
         </li>
 
         <!-- Link to GitHub profile -->
-        <li class="socialWrapper color--skyBlue">
-          <a class="social color--skyBlue"
+        <li class="socialWrapper color--moblinGreen">
+          <a class="social color--moblinGreen"
              title="GitHub Profile"
              target="_blank"
              href="https://github.com/moblinx/">
@@ -45,7 +45,7 @@
 
         <!-- Link to resume, probably a .pdf -->
         <li class="socialWrapper">
-          <a class="social color--skyBlue"
+          <a class="social color--moblinGreen"
              title="Resume"
              href="#">
             <i class="fa fa-file-text"></i>
@@ -53,7 +53,7 @@
         </li>
       </ul>
     </main>
-    <section class="background--skyBlue section">
+    <section class="background--moblinGreen section">
       <h2 class="color--cloud margin--none section__text--centered">
         Portfolio
       </h2>
@@ -61,7 +61,7 @@
 
     <div id="example-work"></div>
 
-    <section class="background--skyBlue section">
+    <section class="background--moblinGreen section">
       <h2 class="color--cloud margin--none section__text--centered">
         About Me
       </h2>
@@ -73,7 +73,7 @@
       </p>
     </section>
 
-    <section class="background--skyBlue section">
+    <section class="background--moblinGreen section">
       <h2 class="color--cloud margin--none section__text--centered">
         Social
       </h2>
