--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li class="socialWrapper">
           <a class="social color--moblinGreen"
              title="Resume"
-             href="#">
+             href="resume.pdf">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
@@ -72,13 +72,6 @@
         I like to work hard and learn new things.
       </p>
     </section>
-
-    <section class="background--moblinGreen section">
-      <h2 class="color--cloud margin--none section__text--centered">
-        Social
-      </h2>
-    </section>
-
 
     <script type="text/javascript" src="dist/bundle.js">
 
